--- a/Simple_Linear_Regression.ipynb
+++ b/Simple_Linear_Regression.ipynb
@@ -66,7 +66,7 @@
         "import seaborn as sns\n",
         "import plotly.express as px\n"
       ],
-      "execution_count": 33,
+      "execution_count": 52,
       "outputs": []
     },
     {
@@ -86,7 +86,7 @@
           "height": 204
         },
         "id": "f6Jw9TQTlVMp",
-        "outputId": "05b3444b-86ef-4920-daf4-d2c282485eb3"
+        "outputId": "4ed6def6-acd4-49f0-bdd7-cc8304c95b6b"
       },
       "source": [
         "# Loading the dataset to pandas DataFrame from remote link\n",
@@ -94,7 +94,7 @@
         "students_data = pd.read_csv(data)\n",
         "students_data.head()"
       ],
-      "execution_count": 34,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -164,7 +164,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 34
+          "execution_count": 53
         }
       ]
     },
@@ -175,12 +175,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "379798e5-200b-4f3d-fac5-4ee589bc8dcb"
+        "outputId": "8bac4949-4fa0-449e-9fda-a8f20f79664d"
       },
       "source": [
         "students_data.shape"
       ],
-      "execution_count": 35,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -192,7 +192,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 35
+          "execution_count": 54
         }
       ]
     },
@@ -203,12 +203,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0K5DybjkvSgY",
-        "outputId": "3c9e58d1-0e76-47d6-e35c-3b6cc46983b8"
+        "outputId": "16555850-7adc-4af2-dec9-72e74ffad4c8"
       },
       "source": [
         "students_data.info()"
       ],
-      "execution_count": 36,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
@@ -234,13 +234,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NTxhnkQUvy1I",
-        "outputId": "d8d26bbc-ab3a-4d99-a65f-41417e960223"
+        "outputId": "26e3acb9-4ec4-4fc3-8d81-6c8bfa619fc0"
       },
       "source": [
         "#Checking for any missing values in the dataset\n",
         "students_data.isnull().sum()"
       ],
-      "execution_count": 37,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -254,7 +254,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 37
+          "execution_count": 56
         }
       ]
     },
@@ -275,7 +275,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 295
         },
-        "outputId": "c59978bc-05b2-4b1c-96d6-8c17a9878a0b"
+        "outputId": "da4f105c-dac6-4e3b-df63-a29757fdec91"
       },
       "source": [
         "# Plotting the distribution of scores\n",
@@ -285,7 +285,7 @@
         "plt.ylabel('Percentage Score')  \n",
         "plt.show()"
       ],
-      "execution_count": 38,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "display_data",
@@ -330,7 +330,7 @@
         "X = students_data.iloc[:, :-1].values\n",
         "y = students_data.iloc[:, 1].values"
       ],
-      "execution_count": 39,
+      "execution_count": 58,
       "outputs": []
     },
     {
@@ -340,12 +340,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "U3nnhMujYYWU",
-        "outputId": "6d832505-6fb4-4058-e664-c35cb190751c"
+        "outputId": "753f654d-5d1e-4fba-b730-69f641143459"
       },
       "source": [
         "print(X)"
       ],
-      "execution_count": 40,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
@@ -387,12 +387,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MX4Wq7F4YZqr",
-        "outputId": "1c25b28e-5310-42f3-b0b6-3ea5f1f1dfc8"
+        "outputId": "20d8a9d8-e098-4124-d5c0-5be8f6ee42f9"
       },
       "source": [
         "print(y)"
       ],
-      "execution_count": 41,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
@@ -422,7 +422,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)"
       ],
-      "execution_count": 42,
+      "execution_count": 61,
       "outputs": []
     },
     {
@@ -441,14 +441,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9gdxNnanY9K-",
-        "outputId": "7bd7e14c-b9f3-436c-e3a3-20bdb516d495"
+        "outputId": "ff6efad4-e42a-43b4-abd4-d44e03b43729"
       },
       "source": [
         "from  sklearn.linear_model import LinearRegression\n",
         "model=LinearRegression()\n",
         "model.fit(X_train, y_train)"
       ],
-      "execution_count": 43,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -460,7 +460,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 43
+          "execution_count": 62
         }
       ]
     },
@@ -471,13 +471,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "61rXF6zpZ5_g",
-        "outputId": "d021ee38-bb2c-43ae-f233-eae135a893f6"
+        "outputId": "9efa31cb-125c-4fcc-b273-7bdeef4ff14a"
       },
       "source": [
         "#For retrieving the slope (coefficient of x)\n",
         "print(model.coef_)"
       ],
-      "execution_count": 44,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "stream",
@@ -495,13 +495,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8f2d568sZ-gZ",
-        "outputId": "4d7f4c07-501f-4fab-dd33-fc770a8cbf9b"
+        "outputId": "26b14cfe-1d6f-4f30-9b0c-85e208f25218"
       },
       "source": [
         "#For retrieving the intercept\n",
         "print(model.intercept_)"
       ],
-      "execution_count": 45,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "stream",
@@ -520,7 +520,7 @@
           "height": 295
         },
         "id": "0eEINxk6ZRE4",
-        "outputId": "549d7070-eba9-413d-a9fb-8fe8d0a3f82f"
+        "outputId": "2bad8abb-7351-42e2-c2b0-42ef14e9a534"
       },
       "source": [
         "# Plotting the regression line\n",
@@ -534,7 +534,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 46,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "display_data",
@@ -567,13 +567,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LX1s9oGTapAd",
-        "outputId": "bb95af3d-de69-4156-8947-b23ea4d4646d"
+        "outputId": "2ee8f096-2e5c-46d9-b932-1e4f2b76823b"
       },
       "source": [
         "y_pred = model.predict(X_test)\n",
         "y_pred"
       ],
-      "execution_count": 47,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -585,7 +585,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 47
+          "execution_count": 66
         }
       ]
     },
@@ -597,14 +597,14 @@
           "height": 204
         },
         "id": "JQzuXviia4Ga",
-        "outputId": "550fdcd7-47f0-4a27-c468-9abc197ef4df"
+        "outputId": "e67814d4-b5ec-440a-a748-bf259d5e717f"
       },
       "source": [
         "# Comparing Actual vs Predicted\n",
         "df = pd.DataFrame({'Actual': y_test, 'Predicted': y_pred})  \n",
         "df "
       ],
-      "execution_count": 48,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -674,7 +674,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 48
+          "execution_count": 67
         }
       ]
     },
@@ -685,23 +685,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yJx-v3NTbGz0",
-        "outputId": "42af403d-eee1-4a96-f914-9c48373e8c6a"
+        "outputId": "0a66f27b-0d5b-4d8e-d333-8c00819e935b"
       },
       "source": [
-        "#Making prediction for input provided by the user\n",
-        "hours=float(input(\"Enter the number of hours studied:\"))\n",
+        "#Making prediction for 9.25 hours/day\n",
+        "hours=9.25\n",
         "input_data_as_numpy_array=np.asarray(hours)\n",
         "input_data_reshaped=input_data_as_numpy_array.reshape(1,-1)\n",
         "own_prediction=model.predict(input_data_reshaped)\n",
         "print(\"No. of Hours studied:\",hours)\n",
         "print(\"Predicted Score:\",own_prediction)"
       ],
-      "execution_count": 49,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Enter the number of hours studied:9.25\n",
             "No. of Hours studied: 9.25\n",
             "Predicted Score: [93.69173249]\n"
           ],
@@ -735,7 +734,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B6-c54NDdGr3",
-        "outputId": "d817fef9-faad-4d30-81aa-e939bbba6aca"
+        "outputId": "f0e8264e-20ce-4fe1-a607-c40131a129db"
       },
       "source": [
         "from sklearn import metrics\n",
@@ -743,7 +742,7 @@
         "print('Mean Squared Error:', metrics.mean_squared_error(y_test, y_pred))\n",
         "print('Root Mean Squared Error:', np.sqrt(metrics.mean_squared_error(y_test, y_pred)))"
       ],
-      "execution_count": 50,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
